@@ -12,16 +12,12 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.*;
 
-import java.time.LocalDateTime;
-import java.util.Collections;
 import java.util.List;
-import java.util.NoSuchElementException;
 
 @RestController
 @RequestMapping("/api/v1/users")
@@ -39,22 +35,13 @@ public class UserController {
     @PreAuthorize("hasAnyRole('ADMIN', 'STAFF', 'CUSTOMER')")
     public ResponseEntity<APIResponse<User>> getProfile(Authentication authentication) {
         try {
-            if (authentication == null || !authentication.isAuthenticated()) {
-                return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
-                        .body(new APIResponse<>(false, "Không được xác thực", null,
-                                Collections.singletonList(new ErrorDetail("Vui lòng cung cấp token hợp lệ")), null));
-            }
             User user = userService.getUserByUsername(authentication.getName());
             APIResponse.DataWrapper<User> data = new APIResponse.DataWrapper<>(List.of(user), null);
-            return new ResponseEntity<>(new APIResponse<>(true, "Profile retrieved successfully", data, null, null), HttpStatus.OK);
-        } catch (AccessDeniedException e) {
-            return ResponseEntity.status(HttpStatus.FORBIDDEN)
-                    .body(new APIResponse<>(false, "Không có quyền truy cập: " + e.getMessage(), null,
-                            Collections.singletonList(new ErrorDetail(e.getMessage())), null));
+            return new ResponseEntity<>(new APIResponse<>(true, "Thành công", data, null), HttpStatus.OK);
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(new APIResponse<>(false, "Lỗi khi lấy profile: " + e.getMessage(), null,
-                            Collections.singletonList(new ErrorDetail(e.getMessage())), null));
+                    .body(new APIResponse<>(false, "Lỗi", null,
+                            List.of(new ErrorDetail("Đã xảy ra lỗi"))));
         }
     }
 
@@ -62,84 +49,85 @@ public class UserController {
     @PreAuthorize("hasAnyRole('ADMIN', 'STAFF', 'CUSTOMER')")
     public ResponseEntity<APIResponse<User>> updateProfile(@RequestBody UserUpdate userUpdate, Authentication authentication) {
         try {
-            if (authentication == null || !authentication.isAuthenticated()) {
-                return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
-                        .body(new APIResponse<>(false, "Không được xác thực", null,
-                                Collections.singletonList(new ErrorDetail("Vui lòng cung cấp token hợp lệ")), null));
-            }
             User user = userService.updateProfile(authentication.getName(), userUpdate);
             APIResponse.DataWrapper<User> data = new APIResponse.DataWrapper<>(List.of(user), null);
-            return new ResponseEntity<>(new APIResponse<>(true, "Profile updated successfully", data, null, null), HttpStatus.OK);
-        } catch (AccessDeniedException e) {
-            return ResponseEntity.status(HttpStatus.FORBIDDEN)
-                    .body(new APIResponse<>(false, "Không có quyền truy cập: " + e.getMessage(), null,
-                            Collections.singletonList(new ErrorDetail(e.getMessage())), null));
+            return new ResponseEntity<>(new APIResponse<>(true, "Thành công", data, null), HttpStatus.OK);
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(new APIResponse<>(false, "Lỗi khi cập nhật profile: " + e.getMessage(), null,
-                            Collections.singletonList(new ErrorDetail(e.getMessage())), null));
+                    .body(new APIResponse<>(false, "Lỗi", null,
+                            List.of(new ErrorDetail("Đã xảy ra lỗi"))));
         }
     }
 
     @PutMapping("/profile/change-password")
-    public ResponseEntity<?> changePassword(
-            Authentication authentication,
-            @RequestBody ChangePasswordRequest dto
-    ) {
-        String username = authentication.getName();
-        User user = userRepository.findByUsername(username)
-                .orElseThrow(() -> new RuntimeException("User không tồn tại"));
-
-        if (!passwordEncoder.matches(dto.getOldPassword(), user.getPasswordHash())) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Mật khẩu cũ không đúng");
+    @PreAuthorize("hasAnyRole('ADMIN', 'STAFF', 'CUSTOMER')")
+    public ResponseEntity<APIResponse<String>> changePassword(Authentication authentication,
+                                                              @RequestBody ChangePasswordRequest dto) {
+        try {
+            userService.changePassword(authentication.getName(), dto);
+            APIResponse.DataWrapper<String> data = new APIResponse.DataWrapper<>(List.of("OK"), null);
+            return ResponseEntity.ok(new APIResponse<>(true, "Đổi mật khẩu thành công", data, null));
+        } catch (IllegalArgumentException e) {
+            return ResponseEntity.badRequest().body(
+                    new APIResponse<>(false, e.getMessage(), null, null));
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(
+                    new APIResponse<>(false, "Lỗi", null, List.of(new ErrorDetail("Đã xảy ra lỗi"))));
         }
-
-        user.setPasswordHash(passwordEncoder.encode(dto.getNewPassword()));
-        user.setUpdatedAt(LocalDateTime.now());
-        userRepository.save(user);
-
-        return ResponseEntity.ok("Đổi mật khẩu thành công");
     }
 
 
     @GetMapping
     @PreAuthorize("hasRole('ADMIN')")
-    public ResponseEntity<APIResponse<User>> getAllUsers(@RequestParam(defaultValue = "0") int page, @RequestParam(defaultValue = "10") int size) {
+    public ResponseEntity<APIResponse<User>> getAllUsers(@RequestParam(defaultValue = "0") int page,
+                                                         @RequestParam(defaultValue = "2") int size) {
         Page<User> userPage = userService.getAllUsers(PageRequest.of(page, size));
         APIResponse.Pagination pagination = new APIResponse.Pagination(page, size, userPage.getTotalPages(), userPage.getTotalElements());
         APIResponse.DataWrapper<User> data = new APIResponse.DataWrapper<>(userPage.getContent(), pagination);
-        return new ResponseEntity<>(new APIResponse<>(true, "Users retrieved successfully", data, null, null), HttpStatus.OK);
+        return new ResponseEntity<>(new APIResponse<>(true, "Thành công", data, null), HttpStatus.OK);
     }
 
     @GetMapping("/{id}")
     @PreAuthorize("hasRole('ADMIN')")
     public ResponseEntity<APIResponse<User>> getUserById(@PathVariable Integer id) {
-        User user = userService.getUserById(id);
-        APIResponse.DataWrapper<User> data = new APIResponse.DataWrapper<>(List.of(user), null);
-        return new ResponseEntity<>(new APIResponse<>(true, "User retrieved successfully", data, null, null), HttpStatus.OK);
+        try {
+            User user = userService.getUserById(id);
+            APIResponse.DataWrapper<User> data = new APIResponse.DataWrapper<>(List.of(user), null);
+            return new ResponseEntity<>(new APIResponse<>(true, "Thành công", data, null), HttpStatus.OK);
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                    .body(new APIResponse<>(false, "Không tìm thấy người dùng", null,
+                            List.of(new ErrorDetail("ID không hợp lệ"))));
+        }
     }
 
     @PutMapping("/{id}")
     @PreAuthorize("hasRole('ADMIN')")
     public ResponseEntity<APIResponse<User>> updateUser(@PathVariable Integer id, @RequestBody UserUpdate userUpdate) {
-        User user = userService.updateUser(id, userUpdate);
-        APIResponse.DataWrapper<User> data = new APIResponse.DataWrapper<>(List.of(user), null);
-        return new ResponseEntity<>(new APIResponse<>(true, "User updated successfully", data, null, null), HttpStatus.OK);
+        try {
+            User user = userService.updateUser(id, userUpdate);
+            APIResponse.DataWrapper<User> data = new APIResponse.DataWrapper<>(List.of(user), null);
+            return new ResponseEntity<>(new APIResponse<>(true, "Cập nhật thành công", data, null), HttpStatus.OK);
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(new APIResponse<>(false, "Lỗi", null,
+                            List.of(new ErrorDetail("Đã xảy ra lỗi"))));
+        }
     }
 
     @PutMapping("/{id}/status")
     @PreAuthorize("hasRole('ADMIN')")
     public ResponseEntity<APIResponse<String>> updateUserStatus(@PathVariable Integer id, @RequestBody Boolean isActive) {
         userService.updateUserStatus(id, isActive);
-        APIResponse.DataWrapper<String> data = new APIResponse.DataWrapper<>(List.of("Status updated"), null);
-        return new ResponseEntity<>(new APIResponse<>(true, "User status updated successfully", data, null, null), HttpStatus.OK);
+        APIResponse.DataWrapper<String> data = new APIResponse.DataWrapper<>(List.of("OK"), null);
+        return new ResponseEntity<>(new APIResponse<>(true, "Thành công", data, null), HttpStatus.OK);
     }
 
     @DeleteMapping("/{id}")
     @PreAuthorize("hasRole('ADMIN')")
     public ResponseEntity<APIResponse<String>> deleteUser(@PathVariable Integer id) {
         userService.deleteUser(id);
-        APIResponse.DataWrapper<String> data = new APIResponse.DataWrapper<>(List.of("User deleted"), null);
-        return new ResponseEntity<>(new APIResponse<>(true, "User deleted successfully", data, null, null), HttpStatus.OK);
+        APIResponse.DataWrapper<String> data = new APIResponse.DataWrapper<>(List.of("OK"), null);
+        return new ResponseEntity<>(new APIResponse<>(true, "Xóa thành công", data, null), HttpStatus.OK);
     }
 }
